--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,6 @@ target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${VISP_LIBRARY})
 add_executable(simu4points src/simu4points.cpp)
 target_link_libraries(simu4points ${PROJECT_NAME}  ${OpenCV_LIBS})
 
-add_executable(control src/control.cpp)
+add_executable(control src/control.cpp src/modeles.cpp)
 target_link_libraries(control ${PROJECT_NAME})
 
